<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Truffle Muffle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_over">GameOverActivity</string>
    <string name="gameover">Game Over</string>
    <string name="replay">Replay</string>
    <string name="exit">Exit</string>
    <string name="score">Score:</string>
    <string name="title_activity_game_over_ol">GameOverOL</string>
    <string name="newScore">Your new Highscore: </string>
    <string name="congrat">Congratulation</string>

</resources>
