<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameOverActivity" >

    <TextView
        android:id="@+id/gameover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="89dp"
        android:text="@string/gameover"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp"
        android:typeface="sans" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30dp" />

    <Button
        android:id="@+id/bExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bReplay"
        android:layout_below="@+id/bReplay"
        android:layout_marginTop="14dp"
        android:text="@string/exit"
        android:width="100dp" />

    <Button
        android:id="@+id/bReplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/replay"
        android:width="100dp" />

</RelativeLayout>