<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlGameOverOL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameOverOL" >

        <TextView
            android:id="@+id/tvGameOver"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvCongrat"
            android:layout_alignParentTop="true"
            android:layout_marginTop="57dp"
            android:gravity="center_horizontal"
            android:text="@string/gameover"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="45dp" />

        <Button
            android:id="@+id/bReplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:gravity="center_horizontal"
            android:text="@string/replay"
            android:width="100dp" />

        <Button
            android:id="@+id/bExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bReplay"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/exit"
            android:width="100dp" />

        <TextView
            android:id="@+id/tvNewScore"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCongrat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:gravity="center_horizontal"
            android:text="@string/newScore"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            
        <TextView
            android:id="@+id/tvCongrat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvNewScore"
            android:layout_below="@+id/tvGameOver"
            android:layout_marginTop="45dp"
            android:gravity="center_horizontal"
            android:text="@string/congrat"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"/>
    
</RelativeLayout>
